testsuite/tests/typecheck/should_fail/T16453E2.hs
module Main (T16453T.main, T16453S.main) where
import T16453T
import T16453S
