testsuite/tests/typecheck/should_fail/T16453E2.stderr

T16453E2.hs:1:28: error: [GHC-69158]
    Conflicting exports for ‘main’:
       ‘T16453T.main’ exports ‘T16453T.main’
         imported from ‘T16453T’ at T16453E2.hs:2:1-14
         (and originally defined at T16453T.hs:2:1-4)
       ‘T16453S.main’ exports ‘T16453S.main’
         imported from ‘T16453S’ at T16453E2.hs:3:1-14
         (and originally defined at T16453S.hs:2:1-4)
